// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for size: inherit 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  all: unset;
  display: block;
  padding: 1px;
  box-sizing: border-box;
  pointer-events: none;
  width: inherit;
  height: inherit;
}"
`;

exports[`getComponentCss() > should return correct css for size: large 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  all: unset;
  display: block;
  padding: 1px;
  box-sizing: border-box;
  pointer-events: none;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() > should return correct css for size: medium 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  all: unset;
  display: block;
  padding: 1px;
  box-sizing: border-box;
  pointer-events: none;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() > should return correct css for size: small 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  all: unset;
  display: block;
  padding: 1px;
  box-sizing: border-box;
  pointer-events: none;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() > should return correct css for size: x-large 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  all: unset;
  display: block;
  padding: 1px;
  box-sizing: border-box;
  pointer-events: none;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() > should return correct css for size: x-small 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  all: unset;
  display: block;
  padding: 1px;
  box-sizing: border-box;
  pointer-events: none;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;

exports[`getComponentCss() > should return correct css for size: xx-small 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
img {
  all: unset;
  display: block;
  padding: 1px;
  box-sizing: border-box;
  pointer-events: none;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  font: .75rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}"
`;
